--- a/index.html
+++ b/index.html
@@ -104,22 +104,22 @@
             </div>
 
             <div class="project-card">
-                <h3>Environmental Detoxification & Remediation</h3>
+                <h3>Photocatalytic Degradation of Organic Compounds</h3>
                 <p class="project-meta">Collaborations: La Brea Tar Pits, Prospering Backyards Project</p>
                 <p>
-                    My research explores processes that use minerals to remove harmful substances from the environment. At the 
-                    La Brea Tar Pits, I'm developing ways to use minerals that take energy from the Sun to break down asphalt 
-                    into light organic compounds that can be used to make carbon fiber—a near-carbon-neutral process. Through 
-                    the Prospering Backyards Pacific Standard Time Art Exhibit, I collaborate with community scientists, artists, 
-                    and scientists to research how minerals could be used for reducing lead exposure in contaminated backyards. 
-                    These same minerals can also absorb rare earth elements from waste streams and from the human body (e.g., 
-                    gadolinium used for MRI contrast).
+                    This research investigates the photocatalytic properties of mineral systems for the degradation of complex 
+                    organic compounds. At the La Brea Tar Pits, we are characterizing mineral-mediated photocatalytic pathways 
+                    that convert polycyclic aromatic hydrocarbons into lower molecular weight organic species suitable for 
+                    carbon fiber synthesis. The Prospering Backyards collaboration examines ion exchange mechanisms in zeolite 
+                    frameworks for selective metal sequestration in soil matrices. Additional studies focus on the sorption 
+                    behavior of lanthanide and actinide elements in microporous materials, with applications in medical imaging 
+                    contrast agent recovery and critical element extraction from aqueous waste streams.
                 </p>
                 <div class="project-tags">
                     <span class="tag">Photocatalysis</span>
-                    <span class="tag">Environmental Science</span>
-                    <span class="tag">Community Science</span>
-                    <span class="tag">Lead Remediation</span>
+                    <span class="tag">Ion Exchange</span>
+                    <span class="tag">Zeolite Chemistry</span>
+                    <span class="tag">Sorption Kinetics</span>
                 </div>
             </div>
 
