--- a/index.html
+++ b/index.html
@@ -319,18 +319,53 @@
 
             <h3 style="color: var(--primary-color); font-size: 1.6rem; margin-top: 2rem; margin-bottom: 1.5rem;">Videos</h3>
             
-            <div class="project-card">
-                <h4>Meet the Scientist: Dr. Aaron Celestian, Mineral Sciences</h4>
-                <p class="project-meta">Natural History Museum of Los Angeles County</p>
-                <div style="margin-top: 1rem;">
-                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/L8qd5wVQvbs" 
-                            title="Meet the Scientist" frameborder="0" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                            allowfullscreen style="border-radius: 8px;"></iframe>
+            <div class="video-grid">
+                <div class="video-card">
+                    <div class="video-wrapper">
+                        <iframe width="100%" height="250" src="https://www.youtube.com/embed/44BXfaC_6R8" 
+                                title="Searching for Life in Salt Crystals" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                allowfullscreen style="border-radius: 8px;"></iframe>
+                    </div>
+                    <h4 style="margin-top: 1rem; font-size: 1.1rem;">Searching for Life in Salt Crystals</h4>
+                    <p class="project-meta">NASA Astrobiology Research</p>
+                </div>
+
+                <div class="video-card">
+                    <div class="video-wrapper">
+                        <iframe width="100%" height="250" src="https://www.youtube.com/embed/L8qd5wVQvbs" 
+                                title="Meet the Scientist" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                allowfullscreen style="border-radius: 8px;"></iframe>
+                    </div>
+                    <h4 style="margin-top: 1rem; font-size: 1.1rem;">Meet the Scientist</h4>
+                    <p class="project-meta">Natural History Museum of LA County</p>
+                </div>
+
+                <div class="video-card">
+                    <div class="video-wrapper">
+                        <iframe width="100%" height="250" src="https://www.youtube.com/embed/NioMWKuqYGI" 
+                                title="Mineral Talks LIVE" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                allowfullscreen style="border-radius: 8px;"></iframe>
+                    </div>
+                    <h4 style="margin-top: 1rem; font-size: 1.1rem;">Mineral Talks LIVE - Episode 66</h4>
+                    <p class="project-meta">Curator Interview</p>
+                </div>
+
+                <div class="video-card">
+                    <div class="video-wrapper">
+                        <iframe width="100%" height="250" src="https://www.youtube.com/embed/C4i8kZefy5o" 
+                                title="Fluid Inclusions Research" frameborder="0" 
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                                allowfullscreen style="border-radius: 8px;"></iframe>
+                    </div>
+                    <h4 style="margin-top: 1rem; font-size: 1.1rem;">Fluid Inclusions & Biosignatures</h4>
+                    <p class="project-meta">Research Overview</p>
                 </div>
             </div>
 
-            <div class="project-card">
+            <div class="project-card" style="margin-top: 2rem;">
                 <h4>Happy Hour with Dr. Aaron Celestian</h4>
                 <p class="project-meta">Natural History Museum of Los Angeles County</p>
                 <p>
@@ -340,17 +375,6 @@
                 </p>
                 <div class="pub-links" style="margin-top: 1rem;">
                     <a href="https://nhmlac.org/video-happy-hour-dr-aaron-celestian" target="_blank" class="btn-small">Watch Video</a>
-                </div>
-            </div>
-
-            <div class="project-card">
-                <h4>Mineral Talks LIVE - Episode 66</h4>
-                <p class="project-meta">Curator Interview</p>
-                <div style="margin-top: 1rem;">
-                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/NioMWKuqYGI" 
-                            title="Mineral Talks LIVE" frameborder="0" 
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-                            allowfullscreen style="border-radius: 8px;"></iframe>
                 </div>
             </div>
 
