--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
             
             <div class="viz-card">
                 <div style="position: relative; width: 100%; height: 0; padding-bottom: 75%; margin-bottom: 1rem;">
-                    <iframe src="https://arcg.is/0iWX4K" 
+                    <iframe src="https://lacnhm.maps.arcgis.com/apps/mapviewer/index.html?webmap=bd266656bb4b47a2b13f556bb1a9b717" 
                             style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none; border-radius: 8px;"
                             allowfullscreen>
                     </iframe>
