--- a/index.html
+++ b/index.html
@@ -36,22 +36,28 @@
         <div class="container">
             <h2>About</h2>
             <div class="about-content">
-                <div class="about-text">
-                    <p>
-                        I am a researcher focused on the ways minerals interact with their environments and living systems, 
-                        and how these interactions can be harnessed to address global challenges such as climate change, 
-                        pollution, and disease. My work lies at the intersection of science, art, and culture, with a 
-                        particular interest in rethinking how we relate to and understand our planet.
-                    </p>
-                    <p>
-                        As Curator of Mineral Sciences at the Natural History Museum of Los Angeles County, I employ 
-                        advanced analytical techniques including X-ray diffraction, Raman spectroscopy, and high-resolution 
-                        imaging to investigate mineral-environment interactions. My research spans from searching for 
-                        biosignatures in salt crystals to developing sustainable lithium extraction methods.
-                    </p>
-                    <p>
-                        <strong>Research Interests:</strong> Astrobiology • Environmental Solutions • Energy Materials • Cultural Heritage • PharmaMineralogy
-                    </p>
+                <div style="display: flex; gap: 3rem; align-items: flex-start; flex-wrap: wrap;">
+                    <div style="flex: 0 0 250px;">
+                        <img src="images/aaron2.jpg" alt="Aaron Celestian" 
+                             style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                    </div>
+                    <div class="about-text" style="flex: 1; min-width: 300px;">
+                        <p>
+                            I am a researcher focused on the ways minerals interact with their environments and living systems, 
+                            and how these interactions can be harnessed to address global challenges such as climate change, 
+                            pollution, and disease. My work lies at the intersection of science, art, and culture, with a 
+                            particular interest in rethinking how we relate to and understand our planet.
+                        </p>
+                        <p>
+                            As Curator of Mineral Sciences at the Natural History Museum of Los Angeles County, I employ 
+                            advanced analytical techniques including X-ray diffraction, Raman spectroscopy, and high-resolution 
+                            imaging to investigate mineral-environment interactions. My research spans from searching for 
+                            biosignatures in salt crystals to developing sustainable lithium extraction methods.
+                        </p>
+                        <p>
+                            <strong>Research Interests:</strong> Astrobiology • Environmental Solutions • Energy Materials • Cultural Heritage • PharmaMineralogy
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -67,6 +73,8 @@
             <div class="project-card">
                 <h3>Sustainable Lithium Extraction from Brines</h3>
                 <p class="project-meta">Funding: Department of Energy | Status: Ongoing</p>
+                <img src="images/lithium.jpg" alt="Lithium extraction research" 
+                     style="width: 100%; max-width: 600px; border-radius: 8px; margin-bottom: 1rem;">
                 <p>
                     Developing low-energy lithium extraction methods using lithium manganese oxide (LMO) for geothermal brines, 
                     oil field wastewater, and desalination streams. This sustainable approach addresses global lithium demand 
@@ -83,6 +91,8 @@
             <div class="project-card">
                 <h3>Kidney Stone Formation & Disease</h3>
                 <p class="project-meta">Status: Ongoing</p>
+                <img src="images/cross-section of a kidneystone.jpg" alt="Kidney stone cross-section" 
+                     style="width: 100%; max-width: 600px; border-radius: 8px; margin-bottom: 1rem;">
                 <p>
                     Investigating how bacteria contribute to calcium oxalate kidney stone formation using high-resolution imaging. 
                     Understanding these microbiological factors is crucial for developing prevention strategies and improving 
@@ -99,6 +109,8 @@
             <div class="project-card">
                 <h3>Photocatalytic Degradation & Ion Exchange in Mineral Systems</h3>
                 <p class="project-meta">Collaborations: La Brea Tar Pits, Prospering Backyards Project</p>
+                <img src="images/zeolite.jpg" alt="Zeolite framework research" 
+                     style="width: 100%; max-width: 600px; border-radius: 8px; margin-bottom: 1rem;">
                 <p>
                     Characterizing mineral-mediated photocatalytic pathways for degradation of polycyclic aromatic hydrocarbons 
                     and pharmaceutical compounds. Investigating ion exchange mechanisms in zeolite frameworks for selective metal 
@@ -271,7 +283,7 @@
             <div class="project-card">
                 <div style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
                     <div style="flex: 0 0 200px;">
-                        <img src="podcast-cover.jpg" alt="Pocketful of Xtals Podcast Cover" 
+                        <img src="images/pox.jpg" alt="Pocketful of Xtals Podcast Cover" 
                              style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
                     </div>
                     <div style="flex: 1; min-width: 300px;">
