--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="project-card">
                 <h3>Sustainable Lithium Extraction from Brines</h3>
                 <p class="project-meta">Funding: Department of Energy | Status: Ongoing</p>
-                <img src="images/lithium.jpg" alt="Lithium extraction research" 
+                <img src="images/brine.jpg" alt="Brine lithium extraction research" 
                      style="width: 100%; max-width: 600px; border-radius: 8px; margin-bottom: 1rem;">
                 <p>
                     Developing low-energy lithium extraction methods using lithium manganese oxide (LMO) for geothermal brines, 
