--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="about-content">
                 <div style="display: flex; gap: 3rem; align-items: flex-start; flex-wrap: wrap;">
                     <div style="flex: 0 0 250px;">
-                        <img src="images/aaron2.jpg" alt="Aaron Celestian" 
+                        <img src="images/aaron2.jpeg" alt="Aaron Celestian" 
                              style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
                     </div>
                     <div class="about-text" style="flex: 1; min-width: 300px;">
@@ -73,55 +73,73 @@
             <div class="project-card">
                 <h3>Sustainable Lithium Extraction from Brines</h3>
                 <p class="project-meta">Funding: Department of Energy | Status: Ongoing</p>
-                <img src="images/brine.jpg" alt="Brine lithium extraction research" 
-                     style="width: 100%; max-width: 600px; border-radius: 8px; margin-bottom: 1rem;">
-                <p>
-                    Developing low-energy lithium extraction methods using lithium manganese oxide (LMO) for geothermal brines, 
-                    oil field wastewater, and desalination streams. This sustainable approach addresses global lithium demand 
-                    without the environmental costs of traditional mining.
-                </p>
-                <div class="project-tags">
-                    <span class="tag">Energy Materials</span>
-                    <span class="tag">X-ray Diffraction</span>
-                    <span class="tag">Ion Exchange</span>
-                    <span class="tag">DOE</span>
+                <div style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
+                    <div style="flex: 0 0 300px;">
+                        <img src="images/brine.jpeg" alt="Brine lithium extraction research" 
+                             style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                    </div>
+                    <div style="flex: 1; min-width: 300px;">
+                        <p>
+                            Developing low-energy lithium extraction methods using lithium manganese oxide (LMO) for geothermal brines, 
+                            oil field wastewater, and desalination streams. This sustainable approach addresses global lithium demand 
+                            without the environmental costs of traditional mining.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">Energy Materials</span>
+                            <span class="tag">X-ray Diffraction</span>
+                            <span class="tag">Ion Exchange</span>
+                            <span class="tag">DOE</span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="project-card">
                 <h3>Kidney Stone Formation & Disease</h3>
                 <p class="project-meta">Status: Ongoing</p>
-                <img src="images/cross-section of a kidneystone.jpg" alt="Kidney stone cross-section" 
-                     style="width: 100%; max-width: 600px; border-radius: 8px; margin-bottom: 1rem;">
-                <p>
-                    Investigating how bacteria contribute to calcium oxalate kidney stone formation using high-resolution imaging. 
-                    Understanding these microbiological factors is crucial for developing prevention strategies and improving 
-                    patient outcomes.
-                </p>
-                <div class="project-tags">
-                    <span class="tag">PharmaMineralogy</span>
-                    <span class="tag">SEM Imaging</span>
-                    <span class="tag">Crystallography</span>
-                    <span class="tag">Medical Research</span>
+                <div style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
+                    <div style="flex: 0 0 300px;">
+                        <img src="images/cross-section-kidneystone.jpeg" alt="Kidney stone cross-section" 
+                             style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                    </div>
+                    <div style="flex: 1; min-width: 300px;">
+                        <p>
+                            Investigating how bacteria contribute to calcium oxalate kidney stone formation using high-resolution imaging. 
+                            Understanding these microbiological factors is crucial for developing prevention strategies and improving 
+                            patient outcomes.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">PharmaMineralogy</span>
+                            <span class="tag">SEM Imaging</span>
+                            <span class="tag">Crystallography</span>
+                            <span class="tag">Medical Research</span>
+                        </div>
+                    </div>
                 </div>
             </div>
 
             <div class="project-card">
                 <h3>Photocatalytic Degradation & Ion Exchange in Mineral Systems</h3>
                 <p class="project-meta">Collaborations: La Brea Tar Pits, Prospering Backyards Project</p>
-                <img src="images/zeolite.jpg" alt="Zeolite framework research" 
-                     style="width: 100%; max-width: 600px; border-radius: 8px; margin-bottom: 1rem;">
-                <p>
-                    Characterizing mineral-mediated photocatalytic pathways for degradation of polycyclic aromatic hydrocarbons 
-                    and pharmaceutical compounds. Investigating ion exchange mechanisms in zeolite frameworks for selective metal 
-                    sequestration, including lanthanide and actinide sorption behavior in microporous materials for critical 
-                    element recovery from aqueous waste streams.
-                </p>
-                <div class="project-tags">
-                    <span class="tag">Photocatalysis</span>
-                    <span class="tag">Ion Exchange</span>
-                    <span class="tag">Zeolite Chemistry</span>
-                    <span class="tag">Sorption Kinetics</span>
+                <div style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
+                    <div style="flex: 0 0 300px;">
+                        <img src="images/zeolite.jpeg" alt="Zeolite framework research" 
+                             style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
+                    </div>
+                    <div style="flex: 1; min-width: 300px;">
+                        <p>
+                            Characterizing mineral-mediated photocatalytic pathways for degradation of polycyclic aromatic hydrocarbons 
+                            and pharmaceutical compounds. Investigating ion exchange mechanisms in zeolite frameworks for selective metal 
+                            sequestration, including lanthanide and actinide sorption behavior in microporous materials for critical 
+                            element recovery from aqueous waste streams.
+                        </p>
+                        <div class="project-tags">
+                            <span class="tag">Photocatalysis</span>
+                            <span class="tag">Ion Exchange</span>
+                            <span class="tag">Zeolite Chemistry</span>
+                            <span class="tag">Sorption Kinetics</span>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -283,7 +301,7 @@
             <div class="project-card">
                 <div style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
                     <div style="flex: 0 0 200px;">
-                        <img src="images/pox.jpg" alt="Pocketful of Xtals Podcast Cover" 
+                        <img src="images/pox.jpeg" alt="Pocketful of Xtals Podcast Cover" 
                              style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
                     </div>
                     <div style="flex: 1; min-width: 300px;">
