--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </header>
 
-    <section id="about" class="section">
+    <section id="about" class="section visible">
         <div class="container">
             <h2>About</h2>
             <div class="about-content">
@@ -140,13 +140,13 @@
         </div>
     </section>
 
-    <section id="publications" class="section">
+    <section id="publications" class="section visible">
         <div class="container">
             <h2>Publications</h2>
             
-            <button class="collapsible-btn" onclick="toggleSection('recent-pubs')">
+            <button class="collapsible-btn active" onclick="toggleSection('recent-pubs')">
                 <span>Recent Publications</span>
-                <span class="toggle-icon">+</span>
+                <span class="toggle-icon">−</span>
             </button>
             <div id="recent-pubs" class="collapsible-content">
                 <!-- Recent publications will be rendered here by JS -->
