--- a/index.html
+++ b/index.html
@@ -245,6 +245,9 @@
                 <div class="pub-links" style="margin-top: 1rem;">
                     <a href="https://nhm.org/unearthed-rare-mineral-exhibition" target="_blank" class="btn-small">Exhibition Page</a>
                     <a href="https://nhmlac.org/press/natural-history-museum-presents-unearthed-raw-beauty-exhibition-some-rarest-and-most" target="_blank" class="btn-small">Press Release</a>
+                    <a href="https://lamag.com/style/worlds-most-magnificent-gems-land-in-l-a/" target="_blank" class="btn-small">LA Magazine</a>
+                    <a href="https://roskingemnewsreport.com/unearthed-raw-beauty-natural-history-museum-los-angeles-california/" target="_blank" class="btn-small">Roskin Gem News</a>
+                    <a href="https://www.latimes.com/travel/newsletter/2025-12-18/la-the-wild-rocks-gems-san-gabriel-mountains-unearthed-raw-beauty-natural-history-museum" target="_blank" class="btn-small">LA Times</a>
                 </div>
             </div>
             
