--- a/index.html
+++ b/index.html
@@ -170,11 +170,11 @@
             <div class="project-card">
                 <div style="display: flex; gap: 2rem; align-items: flex-start; flex-wrap: wrap;">
                     <div style="flex: 0 0 200px;">
-                        <img src="images/pox.jpeg" alt="Pocketful of Xtals Podcast Cover" 
+                        <img src="images/pox.jpeg" alt="Pocketful of Χtals Podcast Cover" 
                              style="width: 100%; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
                     </div>
                     <div style="flex: 1; min-width: 300px;">
-                        <h4>Pocketful of Xtals Podcast</h4>
+                        <h4>Pocketful of Χtals Podcast</h4>
                         <p class="project-meta">Host & Creator | Available on Spotify, Apple Podcasts, and iHeart</p>
                         <p>
                             Exploring the interaction of art, science, and culture and how we can think differently about our planet. 
@@ -252,7 +252,7 @@
             </div>
             
             <div class="project-card">
-                <h4>Pocketful of Xtals: Real-World Impact</h4>
+                <h4>Pocketful of Χtals: Real-World Impact</h4>
                 <p class="project-meta">The Giving List LA Interview</p>
                 <p>
                     How L.A.'s Natural History Museum turns mineral science into clean soil, public health, and sustainable energy. 
@@ -326,7 +326,7 @@
                     <strong>Department:</strong> Mineral Sciences and Crystallography
                 </p>
                 <p>
-                    <strong>Additional Resources:</strong> <a href="https://aaroncelestian.substack.com/" target="_blank">Pocketful of Xtals Blog</a>
+                    <strong>Additional Resources:</strong> <a href="https://aaroncelestian.substack.com/" target="_blank">Pocketful of Χtals Blog</a>
                 </p>
                 <div class="social-links">
                     <a href="https://scholar.google.com/citations?user=Yp2uw-0AAAAJ&hl=en" target="_blank">Google Scholar</a> •
