--- a/cv.html
+++ b/cv.html
@@ -42,6 +42,9 @@
                 <a href="https://aaroncelestian.github.io/CV/" target="_blank" class="btn-small" style="padding: 0.7rem 1.8rem; font-size: 1rem; margin-right: 1rem;">
                     📄 Download Full CV (PDF)
                 </a>
+                <button onclick="window.print()" class="btn-small" style="padding: 0.7rem 1.8rem; font-size: 1rem; margin-right: 1rem; cursor: pointer;">
+                    🖨️ Print CV
+                </button>
                 <a href="https://scholar.google.com/citations?user=Yp2uw-0AAAAJ&hl=en" target="_blank" class="btn-small" style="padding: 0.7rem 1.8rem; font-size: 1rem; background-color: var(--accent-color);">
                     📚 Google Scholar Profile
                 </a>
